more changes to support the maven release plugin
git-svn-id: http://chianti.ucsd.edu/svn@21620 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/corelibs/trunk/pom.xml
+++ b/corelibs/trunk/pom.xml
@@ -43,6 +43,7 @@
         <version>2.0</version>
         <configuration>
           <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/corelibs/tags</tagBase>
+		  <autoVersionSubmodules>true</autoVersionSubmodules>
         </configuration>
       </plugin>
     </plugins>
