--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -98,122 +98,139 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
+
+  	<!-- documentation -->
+    <dependency>
+      <groupId>cytoscape</groupId>
+      <artifactId>docs</artifactId>
+      <version>${version}</version>
+      <classifier>html</classifier>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>cytoscape</groupId>
+      <artifactId>docs</artifactId>
+      <version>${version}</version>
+      <classifier>pdf</classifier>
+      <type>zip</type>
+    </dependency>
+
   	<!-- coreplugins -->
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>advanced-network-merge</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>automatic-layout</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>biomart-client</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>biopax</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>editor</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>equation-functions</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>manual-layout</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>ncbi-client</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>psi-mi</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>psi-mi</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>rfilters</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>sbml-reader</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>table-import</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>attribute-browser</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>cpath</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>cpath2</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>linkout</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>quickfind</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>filters</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
   </dependencies>
