--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -233,6 +233,12 @@
       <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
+    <dependency>
+      <groupId>cytoscape.coreplugins</groupId>
+      <artifactId>core-commands</artifactId>
+      <version>${version}</version>
+      <classifier>jar-with-dependencies</classifier>
+    </dependency>
   </dependencies>
 
 </project>
