--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -239,6 +239,11 @@
       <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
+    <dependency>
+      <groupId>cytoscape-temp</groupId>
+      <artifactId>y-layouts</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
 
 </project>
