--- a/core3/work-api/trunk/pom.xml
+++ b/core3/work-api/trunk/pom.xml
@@ -116,6 +116,12 @@
       <groupId>org.ops4j.pax.logging</groupId>
       <artifactId>pax-logging-api</artifactId>
       <version>1.5.2</version>
-</dependency>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
