updated poms to support docs
git-svn-id: http://chianti.ucsd.edu/svn@21677 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/corelibs/trunk/pom.xml
+++ b/corelibs/trunk/pom.xml
@@ -33,6 +33,7 @@
     <module>undo.support</module>
     <module>fing</module>
     <module>ding</module>
+    <module>docs</module>
   </modules>
 
   <build>
