--- a/corelibs/trunk/docs/pom.xml
+++ b/corelibs/trunk/docs/pom.xml
@@ -4,10 +4,14 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>cytoscape</groupId>
+  <parent>
+    <groupId>cytoscape.corelibs</groupId>
+    <artifactId>parent</artifactId>
+    <version>2.8.0-SNAPSHOT</version>
+  </parent>
+    
   <artifactId>docs</artifactId>
   <packaging>jar</packaging>
-  <version>2.8.0-SNAPSHOT</version>
   <name>Cytoscape Documentation</name>
 
   <build>
@@ -89,9 +93,9 @@
         <executions>
           <execution>
             <goals>
-			<!--
+             <!--
               <goal>generate-pdf</goal>
-			  -->
+              -->
               <goal>generate-javahelp</goal>
               <goal>generate-html</goal>
             </goals>
@@ -109,19 +113,5 @@
       </plugin>
     </plugins>
   </build>
-
-  <distributionManagement>
-    <repository>
-      <id>releases</id>
-      <name>Internal Releases</name>
-      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases</url>
-    </repository>
-    <snapshotRepository>
-      <id>snapshots</id>
-      <name>Internal Snapshots</name>
-      <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots</url>
-    </snapshotRepository>
-  </distributionManagement>
-
 </project>
 
