--- a/cytoscape/trunk/application/pom.xml
+++ b/cytoscape/trunk/application/pom.xml
@@ -11,7 +11,6 @@
   <name>Cytoscape Application</name>
 
   <properties>
-    <corelibs.version>2.8.0-SNAPSHOT</corelibs.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
@@ -297,87 +296,94 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>util-intr</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>graph-dynamic</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>graph-fixed</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>giny</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>render-immed</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>render-stateful</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>render-export</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>fing</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>phoebe-dnd</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>geom-spacial</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>geom-rtree</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>undo-support</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>equations</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>task</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>ding</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>obo</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>commons-cli-1-x-cytocape-custom</artifactId>
-      <version>${corelibs.version}</version>
+      <version>${version}</version>
+    </dependency>
+    <dependency>
+      <groupId>cytoscape.corelibs</groupId>
+      <artifactId>docs</artifactId>
+      <version>${version}</version>
+      <classifier>javahelp</classifier>
+      <type>zip</type>
     </dependency>
 
         <!-- swingx -->
@@ -533,15 +539,6 @@
             <groupId>cytoscape-sun</groupId>
             <artifactId>jaxb-impl</artifactId>
             <version>1.0</version>
-        </dependency>
-
-
-        <dependency>
-            <groupId>cytoscape</groupId>
-            <artifactId>docs</artifactId>
-            <version>${version}</version>
-            <classifier>javahelp</classifier>
-            <type>zip</type>
         </dependency>
   </dependencies>
 
