corrected docs groupId name
git-svn-id: http://chianti.ucsd.edu/svn@21679 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/application/pom.xml
+++ b/cytoscape/trunk/application/pom.xml
@@ -41,7 +41,7 @@
              <configuration>
                <artifactItems>
                  <artifactItem>
-                   <groupId>cytoscape</groupId>
+                   <groupId>cytoscape.corelibs</groupId>
                    <artifactId>docs</artifactId>
                    <version>${version}</version>
                    <type>zip</type>
