--- a/cytoscape/trunk/webstart/pom.xml
+++ b/cytoscape/trunk/webstart/pom.xml
@@ -59,123 +59,128 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
   	<!-- coreplugins -->
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>advanced-network-merge</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>automatic-layout</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>biomart-client</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>biopax</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>editor</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>equation-functions</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>manual-layout</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>ncbi-client</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>psi-mi</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>psi-mi</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>rfilters</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>sbml-reader</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>table-import</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>attribute-browser</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>cpath</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>cpath2</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>linkout</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>quickfind</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
     </dependency>
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>filters</artifactId>
-      <version>2.8.0-SNAPSHOT</version>
+      <version>${version}</version>
       <classifier>jar-with-dependencies</classifier>
+    </dependency>
+    <dependency>
+      <groupId>cytoscape-temp</groupId>
+      <artifactId>y-layouts</artifactId>
+      <version>1.0</version>
     </dependency>
   </dependencies>
 
