fixed docs dependency
git-svn-id: http://chianti.ucsd.edu/svn@21683 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -104,14 +104,14 @@
 
   	<!-- documentation -->
     <dependency>
-      <groupId>cytoscape</groupId>
+      <groupId>cytoscape.corelibs</groupId>
       <artifactId>docs</artifactId>
       <version>${version}</version>
       <classifier>html</classifier>
       <type>zip</type>
     </dependency>
     <dependency>
-      <groupId>cytoscape</groupId>
+      <groupId>cytoscape.corelibs</groupId>
       <artifactId>docs</artifactId>
       <version>${version}</version>
       <classifier>pdf</classifier>
