--- a/csplugins/trunk/soc/jgao/IDMappingService/build.xml
+++ b/csplugins/trunk/soc/jgao/IDMappingService/build.xml
@@ -10,12 +10,17 @@
     <tstamp/>
     <property name="src" location="src"/>
     <property name="lib" value="lib"/>
+    <property name="cyrelease" location="../cytoscape"/>
     <property name="build" location="build"/>
     <property name="build.classes" location="${build}/classes"/>
     <property name="jar.name" location="CyThesaurusService.jar"/>
 
     <!-- Classpath with all lib JAR Files and all Cytoscape Core classes -->
     <path id="classpath">
+        <!-- include cytoscape.jar, which is it release directory top level -->
+        <fileset dir="${cyrelease}">
+            <include name="*.jar"/>
+        </fileset>
         <fileset dir="${lib}">
             <include name="*.jar"/>
         </fileset>
