--- a/coreplugins/trunk/BioPAX/pom.xml
+++ b/coreplugins/trunk/BioPAX/pom.xml
@@ -36,12 +36,12 @@
 		<dependency>
 			<groupId>org.biopax.paxtools</groupId>
 			<artifactId>paxtools-core</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>2.0-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.biopax.paxtools</groupId>
 			<artifactId>paxtools-simple-io</artifactId>
-			<version>2.0-SNAPSHOT</version>
+			<version>2.0-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-logging</groupId>
