Added weighted options to Force Directed preferences panel
git-svn-id: http://chianti.ucsd.edu/svn@21727 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/website/build.xml
+++ b/cytoscapeweb/trunk/website/build.xml
@@ -94,6 +94,11 @@
         <copy todir="${api.dir}/layout" overwrite="true">
             <fileset dir="${temp.dir}/symbols" includes="**.Layout.php"/>
         </copy>
+    	
+        <mkdir dir="${api.dir}/schema"/>
+        <copy todir="${api.dir}/schema" overwrite="true">
+            <fileset dir="${temp.dir}/symbols" includes="**.DataSchema.php **.DataField.php"/>
+        </copy>
         
         <mkdir dir="${api.dir}/visualization"/>
         <copy todir="${api.dir}/visualization" file="${jsdoc.dir}/metadata/empty.txt" />
