--- a/cytoscape/trunk/application/pom.xml
+++ b/cytoscape/trunk/application/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cytoscape</groupId>
   <artifactId>application</artifactId>
-  <version>2.8.0-SNAPSHOT</version>
+  <version>2.8.0-beta1</version>
   <packaging>jar</packaging>
   <name>Cytoscape Application</name>
 
@@ -85,7 +85,7 @@
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
-            <argLine>-Xmx256m</argLine>
+            <argLine>-Xmx1G</argLine>
             <redirectTestOutputToFile>true</redirectTestOutputToFile>
           </configuration>
         </plugin>
