--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -170,7 +170,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>${version}</version>
+      <version>2.8.0-beta1</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
