--- a/coreplugins/trunk/ManualLayout/pom.xml
+++ b/coreplugins/trunk/ManualLayout/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>nerius-math-xform</artifactId>
-      <version>${version}</version>
+      <version>2.8.0-beta1</version>
     </dependency>
   </dependencies>
 
