--- a/coreplugins/trunk/filters/pom.xml
+++ b/coreplugins/trunk/filters/pom.xml
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>cytoscape.coreplugins</groupId>
       <artifactId>quickfind</artifactId>
-      <version>${version}</version>
+      <version>2.8.0-beta1</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
