--- a/coreplugins/trunk/AutomaticLayout/pom.xml
+++ b/coreplugins/trunk/AutomaticLayout/pom.xml
@@ -1,9 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                               http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>cytoscape.coreplugins</groupId>
     <artifactId>parent</artifactId>
-    <version>2.8.0-beta1</version>
+    <version>2.8.0-beta2-SNAPSHOT</version>
   </parent>
 
   <artifactId>automatic-layout</artifactId>
