--- a/coreplugins/trunk/pom.xml
+++ b/coreplugins/trunk/pom.xml
@@ -1,10 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0                               http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cytoscape.coreplugins</groupId>
   <artifactId>parent</artifactId>
   <packaging>pom</packaging>
-  <version>2.8.0-beta1</version>
+  <version>2.8.0-beta2-SNAPSHOT</version>
   <name>Cytoscape Core Plugins Parent POM</name>
 
   <properties>
@@ -179,10 +179,9 @@
   </dependencies>
 
   <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/coreplugins/tags/parent-2.8.0-beta1</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/coreplugins/tags/parent-2.8.0-beta1</developerConnection>
-    <tag>HEAD</tag>
-    <url>http://chianti.ucsd.edu/svn/coreplugins/tags/parent-2.8.0-beta1</url>
+    <connection>scm:svn:http://chianti.ucsd.edu/svn/coreplugins/trunk</connection>
+    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/coreplugins/trunk</developerConnection>
+    <url>http://chianti.ucsd.edu/svn/coreplugins/trunk</url>
   </scm>
 
 </project>
