--- a/cytoscape/trunk/webstart/pom.xml
+++ b/cytoscape/trunk/webstart/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cytoscape</groupId>
   <artifactId>webstart</artifactId>
-  <version>2.8.0-SNAPSHOT</version>
+  <version>2.8.0-beta1</version>
   <packaging>pom</packaging>
   <name>Cytoscape Webstart</name>
 
