--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>cytoscape</groupId>
   <artifactId>distribution</artifactId>
-  <version>2.8.0-beta1</version>
+  <version>2.8.0-beta2-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>Cytoscape Distribution</name>
 
