Separated the ZIP task from build
git-svn-id: http://chianti.ucsd.edu/svn@21776 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/cytoscapeweb/build.xml
+++ b/cytoscapeweb/trunk/cytoscapeweb/build.xml
@@ -20,7 +20,10 @@
     <property name="build.dir" value="build"/>
     <property name="js.src.dir" value="html-template/js"/>
     
-    <target name="build" depends="compile, copy resources to bin, js minify">
+    <target name="build" depends="compile, archive">
+    </target>
+	
+    <target name="archive" depends="copy resources to bin, js minify">
     	<delete dir="${build.dir}" />
     	<mkdir dir="${build.dir}"/>
         <zip destfile="${build.dir}/cytoscapeweb_v${build.version}.zip">
