--- a/core3/io-api/trunk/pom.xml
+++ b/core3/io-api/trunk/pom.xml
@@ -101,7 +101,12 @@
       		<groupId>org.cytoscape</groupId>
       		<artifactId>work-api</artifactId>
       		<version>1.0-SNAPSHOT</version>
-    		</dependency>
+    	</dependency>
+       <dependency>
+      		<groupId>org.cytoscape</groupId>
+      		<artifactId>session-api</artifactId>
+      		<version>1.0-SNAPSHOT</version>
+    	</dependency>
 	</dependencies>
 
 </project>
