fixes for plugin submission
git-svn-id: http://chianti.ucsd.edu/svn@21855 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/mes/GoogleChartFunctions/resources/plugin.props
+++ b/csplugins/trunk/ucsd/mes/GoogleChartFunctions/resources/plugin.props
@@ -4,7 +4,7 @@
 # -- The following properties are REQUIRED -- #
 
 # The plugin name that will be displayed to users
-pluginName=Google Chart API Functions
+pluginName=GoogleChartFunctions
 
 # Description used to give users information about the plugin such as what it does.  
 # Html tags are encouraged for formatting purposes.
