--- a/csplugins/trunk/ucsd/mes/VennDiagram/build.xml
+++ b/csplugins/trunk/ucsd/mes/VennDiagram/build.xml
@@ -1,5 +1,5 @@
 
-<project name="VennDiagram" default="all" basedir=".">
+<project name="VennDiagram" default="all" basedir="." xmlns:artifact="antlib:org.apache.maven.artifact.ant">
 
   <!-- =================================================================== -->
   <!-- Initialization target                                               -->
@@ -7,7 +7,7 @@
   <target name="init">
     <tstamp/>
     <property name="name" value="VennDiagram"/>
-    <property name="version" value="1.0.1"/>
+    <property name="version" value="1.0"/>
 
     <echo message="Building ${name} version ${version} ..."/>
 
@@ -19,8 +19,6 @@
 
     <!-- Define the directories -->
     <property name="root.dir" value="."/>
-    <property name="cytoscape.dir" value="${root.dir}/../../../../cytoscape"/>
-    <property name="cytoscape.lib.dir" value="${cytoscape.dir}/lib"/>
     <property name="resources.dir" value="${root.dir}/resources"/>
     <property name="src.dir" value="${root.dir}/src"/>
     <property name="tests.dir" value="${root.dir}/tests"/>
@@ -33,25 +31,27 @@
     <property name="project.jar" value="${name}.jar"/>
     <property name="test.jar" value="${name}-tests.jar"/>
 
+    <artifact:remoteRepository 
+       id="cytoscape_releases" 
+       url="http://cytoscape.wodaklab.org/nexus/content/repositories/releases/" />
+    <artifact:remoteRepository 
+       id="cytoscape_snapshots" 
+       url="http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/" />
+    <artifact:dependencies pathId="dependency.classpath">
+      <dependency groupId="cytoscape" 
+                  artifactId="application" 
+                  version="2.8.0-beta1"/>
+    </artifact:dependencies>
+
     <!-- Define the class path -->
     <path id="project.class.path">
-      <fileset dir="${cytoscape.dir}">
-        <include name="*.jar"/>
-      </fileset>
-      <fileset dir="${cytoscape.lib.dir}">
-        <include name="*.jar"/>
-      </fileset>
+      <path refid="dependency.classpath"/>
     </path>
    
     <!-- Define the junit class path - It needs to find what we just built --> 
     <path id="junit.class.path" >
+      <path refid="dependency.classpath"/>
       <fileset dir="${root.dir}">
-        <include name="*.jar"/>
-      </fileset>
-      <fileset dir="${cytoscape.dir}">
-        <include name="*.jar"/>
-      </fileset>
-      <fileset dir="${cytoscape.lib.dir}">
         <include name="*.jar"/>
       </fileset>
     </path>
@@ -92,12 +92,11 @@
   <!-- =================================================================== -->
   <target name="jar" 
           depends="compile" >
-<!--		  
-	<copy toDir="${build.dir}">
-		<fileset dir="${resources.dir}/testData" includes="*" />
-	</copy>
--->
-	<copy file="${resources.dir}/plugin.props" todir="${build.dir}/edu/uic/ncdm/venn"/>
+	<filter token="version" value="${version}"/>
+	<copy file="${resources.dir}/plugin.props" 
+	      todir="${build.dir}/edu/uic/ncdm/venn"
+		  filtering="true"
+		  overwrite="true"/>
     <jar destfile="${project.jar}" >
       <fileset dir="${build.dir}"
                includes="**"/>
