--- a/csplugins/trunk/ucsd/mes/VennDiagram/resources/plugin.props
+++ b/csplugins/trunk/ucsd/mes/VennDiagram/resources/plugin.props
@@ -11,10 +11,10 @@ pluginName=Venn Diagram Generator
 pluginDescription=This plugin generates a Venn/Euler Diagram of shared nodes for a selection of networks.
 
 # Plugin version number, this must be two numbers separated by a decimlal.  Ex. 0.2, 14.03
-pluginVersion=0.1
+pluginVersion=@version@
 
 # Compatible Cytoscape version
-cytoscapeVersion=2.5,2.6,2.7
+cytoscapeVersion=2.5,2.6,2.7,2.8
 
 # Category, use one of the categories listed on the website or create your own
 pluginCategory=Analysis
@@ -23,8 +23,4 @@ pluginCategory=Analysis
 # List of authors.  Note each author and institution pair are separated by a : (colon)
 # each additional author institution pair must be separated from other pairs bye a ; (semicolon)
 pluginAuthorsIntsitutions=Leland Wilkinson:University of Illinois, Chicago;Mike Smoot:UC San Diego
-
-# -- The following properties should be set ONLY BY CORE PLUGINS -- #
-downloadURL=http://cytoscape.org/plugins/plugins.xml
-uniqueID=1123456641
 
