turned on warnings and added 1.5 target rules
git-svn-id: http://chianti.ucsd.edu/svn@21871 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsd/mes/VennDiagram/build.xml
+++ b/csplugins/trunk/ucsd/mes/VennDiagram/build.xml
@@ -78,10 +78,10 @@
            debug="${debug}"
            deprecation="${deprecation}" 
            optimize="${optimize}"
+           source="1.5"
+           target="1.5"
            fork="${fork}">
-<!--
        <compilerarg line="-Xlint:all -Xlint:-path"/>
--->
      </javac>
      <echo message="Successfully ran compile task!"/>
   </target>
