Updated PSI-MI artifact id to be more consistent with other bundles (i.e. psi-mi-impl)
git-svn-id: http://chianti.ucsd.edu/svn@21890 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/psi-mi-impl/trunk/pom.xml
+++ b/core3/psi-mi-impl/trunk/pom.xml
@@ -13,7 +13,7 @@
 	</properties>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
-	<artifactId>psi.mi</artifactId>
+	<artifactId>psi-mi-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>
 	<name>${bundle.symbolicName}
 		[${bundle.namespace}]</name>
