Clean-up in conjunction with new CyGroup cleanup.
git-svn-id: http://chianti.ucsd.edu/svn@21896 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsf/scooter/metaNodePlugin2/build.xml
+++ b/csplugins/trunk/ucsf/scooter/metaNodePlugin2/build.xml
@@ -5,7 +5,7 @@
    <property name = "build" location = "build"/>
    <property name = "build.compiler" value = "modern"/>
    <!-- path to Cytoscape under development (CVS) -->
-   <property name = "lib" location = "../../../../cytoscape"/>
+   <property name = "lib" location = "../../../../cytoscape/build"/>
    <property name = "jar"  location = "jar"/>
    <property name = "doc" location = "doc"/>
 
