--- a/cytoscape/trunk/coreplugins/EquationFunctions/pom.xml
+++ b/cytoscape/trunk/coreplugins/EquationFunctions/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>equations</artifactId>
-      <version>2.8.0-beta1</version>
+      <version>${version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
