--- a/cytoscape/trunk/coreplugins/ManualLayout/pom.xml
+++ b/cytoscape/trunk/coreplugins/ManualLayout/pom.xml
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>nerius-math-xform</artifactId>
-      <version>2.8.0-beta1</version>
+      <version>${version}</version>
     </dependency>
   </dependencies>
 
