--- a/cytoscape/trunk/coreplugins/pom.xml
+++ b/cytoscape/trunk/coreplugins/pom.xml
@@ -125,7 +125,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>2.8.0-beta1</version>
+      <version>${version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
