started moving install4j into separate project
git-svn-id: http://chianti.ucsd.edu/svn@21903 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -15,6 +15,7 @@
     <module>corelibs</module>
     <module>application</module>
     <module>coreplugins</module>
+    <module>distribution</module>
   </modules>
 
   <build>
