theoretically set the release:perform goal to only be deploy
git-svn-id: http://chianti.ucsd.edu/svn@21907 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -26,7 +26,8 @@
         <version>2.0</version>
         <configuration>
           <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/cytoscape/tags</tagBase>
-		  <autoVersionSubmodules>true</autoVersionSubmodules>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <goals>deploy</goals>
         </configuration>
       </plugin>
     </plugins>
