--- a/core3/vizmap-api/branches/vp-tree/pom.xml
+++ b/core3/vizmap-api/branches/vp-tree/pom.xml
@@ -123,7 +123,7 @@
 		<!-- Cytoscape modules -->
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>viewmodel-api</artifactId>
+			<artifactId>presentation-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
