added javadoc distribution
git-svn-id: http://chianti.ucsd.edu/svn@21929 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -15,6 +15,7 @@
     <module>corelibs</module>
     <module>application</module>
     <module>coreplugins</module>
+    <module>javadoc</module>
     <module>distribution</module>
   </modules>
 
