--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -17,6 +17,8 @@
     <module>coreplugins</module>
     <module>javadoc</module>
     <module>distribution</module>
+    <module>release-bundles</module>
+    <module>webstart</module>
   </modules>
 
   <build>
