renamed release-bundles to packaging
git-svn-id: http://chianti.ucsd.edu/svn@21931 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/packaging/pom.xml
+++ b/cytoscape/trunk/packaging/pom.xml
@@ -11,9 +11,9 @@
   </parent>
 
   <groupId>cytoscape</groupId>
-  <artifactId>release-bundles</artifactId>
+  <artifactId>packaging</artifactId>
   <packaging>jar</packaging>
-  <name>Cytoscape Release Bundles</name>
+  <name>Cytoscape Release Bundle Packaging</name>
 
   <pluginRepositories>
     <pluginRepository>
