--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -17,7 +17,7 @@
     <module>coreplugins</module>
     <module>javadoc</module>
     <module>distribution</module>
-    <module>release-bundles</module>
+    <module>packaging</module>
     <module>webstart</module>
   </modules>
 
