updated distribution artifact name to be cytoscape
git-svn-id: http://chianti.ucsd.edu/svn@21933 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/distribution/pom.xml
+++ b/cytoscape/trunk/distribution/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <groupId>cytoscape</groupId>
-  <artifactId>distribution</artifactId>
+  <artifactId>cytoscape</artifactId>
   <packaging>jar</packaging>
   <name>Cytoscape Distribution</name>
 
