--- a/core3/vizmap-api/branches/vp-tree/pom.xml
+++ b/core3/vizmap-api/branches/vp-tree/pom.xml
@@ -123,7 +123,7 @@
 		<!-- Cytoscape modules -->
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>presentation-api</artifactId>
+			<artifactId>viewmodel-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
@@ -132,6 +132,12 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>presentation-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
